--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Ahoj marek!
+<html>
+  <head>
+    <title>Welcome</title>
+  </head>
+  <body>
+This is a test STI HTML application.
+  </body>
+</html>
+
